[tool.poetry]
name = "peter-ai"
version = "0.1.0"
description = "Peter AI package"
authors = ["Anonymous <anonymous@github.com>"]
readme = "README.md"
license = "MIT"
include = ["src"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"
mypy = "^1.9.0"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]
ignore = ["E203"]
